# AFP_Project

./: AFP-Project.cabal  CHANGELOG.md  LICENSE  README.md  cabal.project  db  tables.sqlite  test-db  vapid.txt
showcase/: index1.html  index2.html  index3.html  index4.html
src/: App.hs  Config.hs  DBAdapter.hs  Handlers.hs  Main.hs  Notification.hs  Poll.hs  PostRedirect.hs  Scraper.hs
src/Handlers/: Account.hs  Clients.hs  Notification.hs  Targets.hs
src/Models/: EditTarget.hs  FullTarget.hs  Login.hs  Notification.hs  Register.hs  Target.hs  User.hs  Website.hs
tests/: AccountTest.hs  LoginTest.hs  NotificationTest.hs  ScraperTest.hs  TargetTest.hs  Test.hs  TestUtils.hs
var/www/: index.html
www/: account.html  index.html  login.html  notifier.js  register.html
www/scripts/: notification.js  notifier.js  utils.js  xsrf.js
www/styles/: style.css
