cabal-version:       >=1.10
-- For further documentation, see
-- http://haskell.org/cabal/users-guide/
name:                AFP-Project
version:             0.1.0.0
synopsis:            A website change notifier
description:         A website change notifier
license:             MIT
license-file:        LICENSE
author:              Hanno, Luuk, Marco
maintainer:          h.p.ottens@students.uu.nl,
category:            web-scraper
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  default-extensions:  
      DataKinds
    , TypeOperators
    , OverloadedStrings
    , DeriveGeneric
    , FlexibleContexts
  exposed-modules:
      DBAdapter
    , Config
    , PostRedirect
    , Models.Login
    , Models.Register
    , Models.Website
    , Models.User
    , Models.Target
    , Models.Notification
    , Handlers.Account
    , Scraper
    , Notification
  hs-source-dirs:
      src
  build-depends:
      base
    , servant-server
    , servant-auth
    , servant-auth-server
    , aeson
    , warp
    , sqlite-simple
    , hashable
    , mtl
    , transformers
    , http-api-data
    , time
    , transformers-base
    , split
    , cron
    , text
    , HTTP
    , tagsoup
    , web-push
    , lens
    , http-client
  default-language: Haskell2010

executable AFP-Project
  ghc-options:         -Wall
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       DBAdapter
                     , Config
                     , Models.Login
                     , Models.Register
                     , Models.Website
                     , Models.User
                     , Models.Target
                     , Models.Notification
                     , Handlers.Account
                     , Handlers.Targets
                     , Scraper
                     , Notification
                     , PostRedirect
  default-language:    Haskell2010

  default-extensions:  
      DataKinds
    , TypeOperators
    , OverloadedStrings
    , DeriveGeneric
    , FlexibleContexts
  build-depends:
      AFP-Project
    , base
    , servant-server
    , servant-auth
    , servant-auth-server
    , aeson
    , warp
    , sqlite-simple
    , hashable
    , mtl
    , transformers
    , http-api-data
    , time
    , transformers-base
    , split
    , cron
    , text
    , HTTP
    , tagsoup
    , web-push
    , lens
    , http-client

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Test.hs
  build-depends:
        base >= 4 && < 5
      , AFP-Project 
      , QuickCheck
      , tasty
      , tasty-quickcheck
      , sqlite-simple
