-- For further documentation, see
-- http://haskell.org/cabal/users-guide/
cabal-version:       >=1.10
name:                AFP-Project
version:             0.1.0.0
synopsis:            A website change notifier
description:         A website change notifier
license:             MIT
license-file:        LICENSE
author:              Hanno Ottens (5980933), Luuk (???), Marco (???)
category:            web-scraper
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:  
      DataKinds
    , TypeOperators
    , OverloadedStrings
    , DeriveGeneric
    , FlexibleContexts
  exposed-modules:
      App
    , DBAdapter
    , Config
    , Scraper
    , Notification
    , PostRedirect
    -- Models
    , Models.Login
    , Models.Register
    , Models.Website
    , Models.User
    , Models.Target
    , Models.FullTarget
    , Models.Notification
    -- Handlers
    , Handlers.Account
    , Handlers.Clients
    , Handlers.Notification
    , Handlers.Targets
  build-depends:
      base
    , servant-server
    , servant-auth
    , servant-auth-server
    , aeson
    , warp
    , sqlite-simple
    , hashable
    , mtl
    , transformers
    , http-api-data
    , time
    , transformers-base
    , split
    , cron
    , text
    , HTTP
    , tagsoup
    , web-push
    , lens
    , http-client
    , http-client-tls

executable AFP-Project
  ghc-options:         -Wall
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:      
      App 
    , DBAdapter
    , Config
    , Scraper
    , Notification
    , PostRedirect
    -- Models
    , Models.Login
    , Models.Register
    , Models.Website
    , Models.User
    , Models.Target
    , Models.FullTarget
    , Models.Notification
    -- Handlers
    , Handlers.Account
    , Handlers.Clients
    , Handlers.Notification
    , Handlers.Targets
  default-extensions:  
      DataKinds
    , TypeOperators
    , OverloadedStrings
    , DeriveGeneric
    , FlexibleContexts
  build-depends:
      AFP-Project
    , base
    , servant-server
    , servant-auth
    , servant-auth-server
    , aeson
    , warp
    , sqlite-simple
    , hashable
    , mtl
    , transformers
    , http-api-data
    , time
    , transformers-base
    , split
    , cron
    , text
    , HTTP
    , tagsoup
    , web-push
    , lens
    , http-client
    , http-client-tls

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Test.hs
  build-depends:
        base >= 4 && < 5
      , AFP-Project 
      , QuickCheck
      , tasty
      , tasty-quickcheck
      , sqlite-simple
