-- For further documentation, see
-- http://haskell.org/cabal/users-guide/
cabal-version:       >=1.10
name:                AFP-Project
version:             0.1.0.0
synopsis:            A website change notifier
description:         A website change notifier
license:             MIT
license-file:        LICENSE
author:              Hanno Ottens (5980933), Luuk Glorie (5972868), Marco van de Weerthof (5871476)
category:            web-scraper
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:  
      DataKinds
    , DeriveGeneric
    , FlexibleContexts
    , FlexibleInstances
    , KindSignatures
    , OverloadedStrings
    , TypeOperators
    , TypeSynonymInstances
  exposed-modules:
      App 
    , Config
    , DBAdapter
    , Notification
    , Poll
    , PostRedirect
    , Scraper
    -- Models
    , Models.EditTarget
    , Models.FullTarget
    , Models.Login
    , Models.Notification
    , Models.Register
    , Models.Target
    , Models.User
    , Models.Website
    -- Handlers
    , Handlers.Account
    , Handlers.Notification
    , Handlers.Targets
  build-depends:
      aeson
    , base
    , bytestring
    , cron
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , lens
    , mtl
    , network-uri
    , pwstore-fast
    , servant-auth
    , servant-auth-server
    , servant-server
    , split
    , sqlite-simple
    , tagsoup
    , tagsoup-selection
    , text
    , time
    , transformers
    , transformers-base
    , warp
    , web-push

executable AFP-Project
  ghc-options:         -Wall
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  
      DataKinds
    , DeriveGeneric
    , FlexibleContexts
    , FlexibleInstances
    , KindSignatures
    , OverloadedStrings
    , TypeOperators
    , TypeSynonymInstances
  other-modules:      
      App 
    , Config
    , DBAdapter
    , Notification
    , Poll
    , PostRedirect
    , Scraper
    -- Models
    , Models.EditTarget
    , Models.FullTarget
    , Models.Login
    , Models.Notification
    , Models.Register
    , Models.Target
    , Models.User
    , Models.Website
    -- Handlers
    , Handlers.Account
    , Handlers.Notification
    , Handlers.Targets
  build-depends:
      AFP-Project
    , aeson
    , base
    , bytestring
    , cron
    , Diff
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , lens
    , mtl
    , network-uri
    , pwstore-fast
    , servant-auth
    , servant-auth-server
    , servant-server
    , split
    , sqlite-simple
    , tagsoup
    , tagsoup-selection
    , text
    , time
    , transformers
    , transformers-base
    , warp
    , web-push

test-suite test
  default-language: Haskell2010
  default-extensions:
        OverloadedStrings     
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Test.hs
  other-modules:
        LoginTest
      , NotificationTest
      , ScraperTest
      , TargetTest
      , TestUtils
  build-depends:
        AFP-Project
      , aeson
      , base >= 4 && < 5
      , bytestring
      , cookie
      , containers
      , directory
      , hashable
      , hspec
      , hspec-wai
      , http-api-data
      , http-types
      , QuickCheck
      , sqlite-simple
      , tagsoup
      , tasty
      , tasty-quickcheck
      , wai
      , wai-extra
